# funksystem

./: Cargo.toml  README.md  TODO.md  justfile  shell.nix
funksysbevy/: Cargo.toml  README.md
funksysbevy/src/: data.rs  lib.rs
funksyscore/: Cargo.toml  README.md  settings.ron
funksyscore/src/: chart.rs  data.rs  graphics.rs  lib.rs
funksystem/: Cargo.toml
funksystem/src/: core.rs  main.rs
libfunksystem/: Cargo.toml
libfunksystem/src/: core.rs  lib.rs
libfunksystem/src/core/: data.rs
src/: core.rs  main.rs
src/core/: graphics.rs
