[package]
name = "funksysbevy"
description = "Bevy-specific implementation of funksyscore"
authors = ["r6915ee <astergthefourth@gmail.com>"]
license = "MIT"
categories = ["games"]
repository = "https://codeberg.org/r6915ee/funksystem"
keywords = ["fnf"]
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
log = "0.4.28"
funksyscore = { version = "0.1.0", path = "../funksyscore" }
serde = "1.0.226"
ron = "0.11.0"
dirs = "6.0.0"

[dev-dependencies]
funksyscore = { version = "0.1.0", path = "../funksyscore" }
