[package]
name = "funksystem"
authors = ["r6915ee <astergthefourth@gmail.com>"]
description = "Alternative fangame engine for Friday Night Funkin'"
version = "0.1.0"
license = "MIT"
repository = "https://codeberg.org/r6915ee/funk-aspect"
categories = ["games", "command-line-utilities"]
keywords = ["game", "games", "mod"]
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy-panic-handler = "5.0.0"
dirs = "6.0.0"
ron = "0.11.0"
serde = { version = "1", features = ["derive"] }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
