[package]
name = "funksystem"
authors = ["r6915ee <astergthefourth@gmail.com>"]
description = "Alternative fangame engine for Friday Night Funkin'"
version = "0.1.0"
license = "MIT"
repository = "https://codeberg.org/r6915ee/funk-aspect"
categories = ["games", "command-line-utilities"]
keywords = ["game", "games", "mod"]
edition = "2024"

[dependencies]
libfunksystem = { version = "0.1.0", path = "../libfunksystem" }
bevy = { version = "0.16.1" }
log = "0.4"
clang_log = "2.1.2"
bevy-panic-handler = "5.0.0"

[dev-dependencies]
libfunksystem = { version = "0.1.0", path = "../libfunksystem" }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
