[package]
name = "funksystem"
authors = ["r6915ee <astergthefourth@gmail.com>"]
description = "Alternative fangame engine for Friday Night Funkin'"
version = "0.1.0"
license = "MIT"
repository = "https://codeberg.org/r6915ee/funksystem"
categories = ["games", "command-line-utilities"]
keywords = ["game", "games", "mod"]
edition = "2024"

[dependencies]
funksyscore = { version = "0.1.0", path = "../funksyscore" }
funksysbevy = { version = "0.1.0", path = "../funksysbevy" }
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_window",
  "bevy_winit",
  "png",
  "vorbis",
  "x11"
] }
log = "0.4"
clang_log = "2.1.2"
bevy-panic-handler = "5.0.0"

[dev-dependencies]
funksyscore = { version = "0.1.0", path = "../funksyscore" }
funksysbevy = { version = "0.1.0", path = "../funksysbevy" }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
